<resources>
    <string name="app_name">Mobile Ventilator</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="national_id">national ID(optional)</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="re_national_id">re-national ID(optional)</string>
    <string name="e_mail_preffix_of_gmail">E-mail(optional)</string>
    <string name="phone">phone</string>
    <string name="work_type">work type</string>
    <string name="organization">organization</string>
    <string name="organization_id">organization ID</string>
    <string name="password">password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>